# spektro_db

./: .gitignore  build_documentation.sh  create.py  db_struktur.odt  main.py  pyproject.toml  test.py
.github/workflows/: deploy_docs.yml
crud_db/: create.py  delete.py  read.py  update.py
data_management/: create.py  data_loader.py  hdf5_reader.py  load_bruker_bes3t.py  measurement_management.py  read.py
data_management/data/M3/: measurement.h5
data_management/data/M3/raw/: 01_Q_2pBsw_TTM-Cz-9An_80K_dark.DSC  01_Q_2pBsw_TTM-Cz-9An_80K_dark.DTA
docs/source/: conf.py  crud_db.rst  data_management.rst  helpers.rst  index.rst  models.rst  tutorial_molecules.rst  tutorial_structure.rst
helpers/: helper_functions.py
models/: allowed_values.py  creation_pydantic_measurements.py  creation_pydantic_molecules.py  measurements.py  molecules.py
src/specatalog/: cli.py  main.py
src/specatalog/crud_db/: create.py  read.py  update.py
src/specatalog/helpers/: create_database.py  helper_functions.py
src/specatalog/models/: creation_pydantic_molecules.py  molecules.py
src/specatalog/user/: defaults.json
